style: fix footer link spacing

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -98,7 +98,6 @@
   &__list {
     @include flexbox(column);
 
-    gap: $space-8px;
     margin: $space-8px 0 0;
     padding: 0;
 
